# create3_controller

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  QuickRun.md  README.md  config.json  docker-compose.yml  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml  processmanager.h  runner.sh
.github/workflows/: docker-image.yml
Core/: ControllerManager.cpp  ControllerManager.h  DockHelper.h
action_waypoints_interfaces/: CMakeLists.txt  package.xml
action_waypoints_interfaces/action/: Dynmap.action
cmake/: CPM.cmake  Findsensor_fusion.cmake
config/: apriltag_param.yaml  camera_info.py  cfg_36h11.yaml  cfg_joint_cameras copy.yaml  cfg_joint_cameras.yaml  create3_state.rviz  create3_state_v2.rviz  dual_ekf.yaml  dwa_param.yaml  ekf.yaml  gazebo_sim.rviz  head_camera_logitec_1920.yaml  head_camera_logitec_720.yaml  head_camera_nexigo_1920.yaml  head_camera_nexigo_720.yaml  map.yaml  map_server_params.yaml  multicam.rviz  vf_map.yaml
config/bak/: map_server.sh  ukf.yaml
controller/: CMakeLists.txt  manager.cpp  manager.h
controller/DWA/: dwa_planner.cpp  dwa_planner.h  dwa_planner_ros.cpp  dwa_planner_ros.h
controller/JOY/: joystick.h
controller/PID/: UnicycleController.cpp  UnicycleController.h
controller/Waypoints/: WaypointController.cpp  WaypointController.h
create3_controller_gui/: CMakeLists.txt  dfa.h  mainwindow.ui  process_manager.cpp
dwa_controller/: CMakeLists.txt  dwa_controller_node.cpp  dwa_planner.cpp  dwa_planner_ros.cpp
icon/: create3.desktop  create3.sh
include/: COM.h  controller.hpp  model.hpp  view.hpp
include/create3_controller/: dwa_planner.h  dwa_planner_ros.h  state_estimator.h
include/utilities/: FusedData.h  LoggerCSV.h  param_manager2.h  viz_objects.h
launch/: airlab_cameras.launch.py  compose_gazebo_controller.launch.py  compose_state_estimator.launch.py  controller_dev.launch.py  create3_apriltag.launch.py  create3_controller_gui.launch.py  create3_dwa_controller.launch.py  create3_ekf.py  create3_gazebo.launch.py  create3_gazebo_multi.launch.py  create3_joystick.py  create3_simple_controller.launch.py  dwa_launch2.yaml  dwa_launch3.yaml  ekf.launch.py  exp_deploy_robot.launch.py  gazebo_controller.launch.py  map_server.launch.py  state_estimator_dev.launch.py  ukf.launch.py  usb_cam.launch.py  vf_map_server.launch.py  waypoint_controller_dev.launch.py
launch/bak/: dwa_launch.yaml  ekf.launch.py  ukf.launch.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
launch/rosbagPlayer/: apriltag.sh  reliability_override.yaml  rosbagPlayer.sh
model/: CMakeLists.txt  GazeboStateEstimator.h  JointStateEstimator.cpp  JointStateEstimator.h  Pose.h  StateEstimatorBase.h
model/filter/: ComplementaryFilter.h  EKF.cpp  EKF.h  FilterBase.h
model/map/: DynamicMap.cpp  DynamicMap.h
results/: create3FusionLogger_2023-03-24_12.17.49.csv  logger_2023-04-10_11:35:49.csv  odom_roomba20.csv  odom_roomba21.csv  subsampled20_odom_roomba20.csv  subsampled20_roomba21.csv  traj_roomba20.csv
scripts/: __init__.py  calibrate_cams.py  camera_info.py  main_find_transform.py  main_save_transform.py  tf_logitec_cam_tag36h11:7.csv  tf_nexigo_cam_tag36h11:7.csv
scripts/old/: tf_nexigo_cam_tag36h11:7.csv
simple_controller/: CMakeLists.txt  SimpleController.cpp  SimpleController.h  simple_controller_node.cpp
src/: COM.cpp  create3_controller_node.cpp  dwa_controller_node.cpp  dwa_planner.cpp  dwa_planner_ros.cpp  gazebo_sim_node.cpp  joystick_node.cpp  map_server_node.cpp  multirobot_gazebo_sim_node.cpp  simple_controller_node.cpp  state_estimator_node.cpp  viewer_node.cpp
state_estimator/: CMakeLists.txt  ComplementaryFilter.h  EKF.cpp  EKF.h  FilterBase.h  JointStateEstimator.cpp  JointStateEstimator.h  StateEstimatorBase.h  StateViz.cpp  StateViz.h  state_estimator_node.cpp
test/: .~lock.waypointcustom.csv#  .~lock.wp_map1.csv#  exp_wp_map2.csv  map_test2.yaml  waypointcustom.csv  wp_map1.csv  wp_map2.csv  wp_test1.csv  wp_test2.csv
view/: CMakeLists.txt  ControllerViz.cpp  ControllerViz.h  StateViz.cpp  StateViz.h
view/GUI/: CMakeLists.txt  CMakeLists.txt.user.9bc22b9  ProgramOptions.h  config.json  dfa.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  process_manager.h  processmanager.cpp  processmanager.h
